--- a/001-praca/package.json
+++ b/001-praca/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "06-services",
+  "name": "praca",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,10 +7,11 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
-    "html-react-parser": "^1.2.6",
+    "bootstrap": "^4.6.0",
+    "install": "^0.13.0",
+    "npm": "^7.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-html-parser": "^2.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
